# pilot-hdc-cli

./: .gitignore  .pre-commit-config.yaml  README.md  env.py  pyproject.toml
.github/workflows/: hdc-pipeline.yml
app/: pilotcli.py
app/commands/: container_registry.py  dataset.py  entry_point.py  file.py  project.py  use_config.py  user.py
app/configs/: app_config.py  user_config.py
app/models/: convert_type.py  service_meta_class.py  singleton.py  upload_form.py
app/resources/: custom_error.py  custom_help.py
app/services/container_registry_manager/: container_registry_manager.py
app/services/crypto/: crypto.py
app/services/dataset_manager/: dataset_detail.py  dataset_download.py  dataset_list.py
app/services/file_manager/: file_lineage.py  file_list.py  file_manifests.py  file_tag.py
app/services/file_manager/file_download/: download_client.py  model.py
app/services/file_manager/file_upload/: exception.py  file_upload.py  models.py  upload_client.py  upload_validator.py
app/services/logger_services/: log_functions.py
app/services/output_manager/: error_handler.py  help_page.py  message_handler.py
app/services/project_manager/: project.py
app/services/user_authentication/: decorator.py  token_manager.py  user_login_logout.py  user_set_config.py
app/utils/: aggregated.py
tests/: conftest.py
tests/app/commands/: test_file.py
tests/app/services/dataset_manager/: test_dataset_detail.py  test_dataset_list.py
tests/app/services/project_manager/: test_project.py
tests/app/utils/: test_aggregated.py
(+4 files in other folders)
