[tool.poetry]
name = "app"
version = "2.2.4"
description = "This service is designed to support pilot platform"
authors = ["Indoc Research"]

[tool.poetry.dependencies]
python = ">=3.7,<3.11"
click = "7.1.2"
PyJWT = "1.7.1"
questionary = "^1.10.0"
tqdm = "4.56.0"
cryptography = "41.0.3"
urllib3 = "^1.26.14"
requests = "^2.28.2"
pydantic = "^1.9.2"
cffi = "^1.15.1"
pre-commit = "^2.19.0"
pyinstaller = "^5.4.1"
httpx = "^0.23.0"
pilot-platform-common = "^0.1.3"
qrcode = "^7.4.2"
pytest-click = "^1.1.0"

[tool.poetry.dev-dependencies]
pytest = "6.2.5"
pytest-cov = "^3.0.0"
pytest-mock = "^3.7.0"
pytest-httpx = "^0.21.2"
requests-mock = "^1.9.3"

[tool.poetry.scripts]
pilotcli = "app.pilotcli:cli"

[tool.pytest.ini_options]
testpaths = "tests"

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
